--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,23 +1,114 @@
-.head-title[]
+.head-title[ 
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
+]
+
 
 .head-info[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
+
 
 .main-title[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
+
 
 .main-info[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
+
 
 .founders-title[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
+
 
 .fonders-info[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
+
 
 .contact-title[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
 
+
 .contact-info[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
+]
+.footer-info[
+    font-family: 
+    font-style: 
+    font-weight:
+    font-size: 
+    line-height: 
+    letter-spacing: 
+    color: 
+    margin-top:
+    margin-left: 
 ]
 
