change of text and adding images

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -18,13 +18,13 @@
 
 
 .head-info[
-    font-family: 
+    font-family:'lato', helvetica, Arial,Lucida, sans-serif
     font-style: 
     font-weight:
-    font-size: 
+    font-size: 14px
     line-height: 
     letter-spacing: 
-    color: 
+    color: #121212
     margin-top:
     margin-left: 
 ]
