--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -13,3 +13,27 @@
   font-variation-settings:
     "wdth" 100;
 } */
+
+/* .header img {
+    height: 50px;
+    width: 100px;
+}
+
+img {
+  width: 50px;
+}
+
+.header {
+    width: 50px;
+}
+
+h1 {
+  color: aqua;
+  background-color: aquamarine;
+} */
+
+/* .kontakta-oss {
+  background-color: aqua;
+} */
+
+/* this is the old version */
