--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,11 +1,109 @@
 *{
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-family: playfair-display;
-    border: border-box;
+    text-decoration: none;
+
+}
+.navbar{
+    background: rgb(67, 9, 9);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding-right: 15px;
+    padding-left: 15px;
+    height: 100px;
 }
 
-.Navbar{
+.navdiv{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+ }
+  
+ li{
+    list-style: none;
+    display: inline-block;
+ }
+
+ li a{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 25px;
+
+}
+
+
+.logo {
     height: 80px;
-    background-color: #121212;
+    width: 80px;
+    background-size: cover;
+    background-image: url(/images/newlogo.png);
+    background-color: beige;
+    margin-top: 10px;
+  
+}
+
+.border{
+    border: 1.5px solid transparent;
+
+}
+.border:hover{
+    border: 1.5px solid black;
+}
+
+
+.container{
+    padding: 0 0%;     
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+}
+.background-clip{
+    position:absolute;
+    z-index: -1;
+    right: 0;
+    bottom:0 ;
+    height: 100%;
+}
+.content{
+    text-align: center;
+}
+
+.content h1{
+    font-size: 40px;
+    color: white;
+    margin-bottom: 5px;
+    margin-top: 200px;
+
+}
+.content a{
+    font-size: 20px;
+    background-color: transparent;
+    color: white;
+    padding: 10px,20px;
+    border-radius: 20px;
+
+}
+@media (min-aspect-ratio:16/9){
+    .background-clip{
+        width:100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio:16/9){
+    .background-clip{
+    width: auto;
+    height:100%;
+    }
+}
+button{
+    background-color:beige;
+    margin: 30px;
+    border-radius: 10%;
+}
+
+button:hover{
+    color: burlywood;
+    border: 2px solid black;
 }
