--- a/styles/landing.css
+++ b/styles/landing.css
@@ -52,8 +52,8 @@
 
 
 .container{
-    padding: 0 0%;     
-    height: 100%;
+    padding: 0 0%;   
+    min-height: 50px;
     
     display: flex;
     align-items: center;
@@ -71,7 +71,7 @@
 }
 
 .content h1{
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     margin-bottom: 5px;
     margin-top: 200px;
@@ -82,7 +82,7 @@
     background-color: transparent;
     color: white;
     padding: 10px,20px;
-    border-radius: 20px;
+    border-radius: 40px;
 
 }
 @media (min-aspect-ratio:16/9){
@@ -107,3 +107,34 @@ button:hover{
     color: burlywood;
     border: 2px solid black;
 }
+
+
+
+.titlecontainer{
+    height: 1000px;
+    width: 1000px;
+}
+.titlediv{
+    height: 600x;
+    width: 600px;
+    font-family: Playfair display, Georgia, 'Times New Roman', Times, serif;
+    color: #874619;
+    display: inline-block;
+    justify-content: center;
+    margin: 20% 40% 20% 30%;
+    padding: 20px 20px;
+    
+}
+ .titlediv h1{
+    font-size: 50px;
+    text-align: center;
+    font-weight: bolder;
+    text-decoration: underline;
+ }
+
+ .titlediv h4 h5{
+    font-size: 40px;
+    font-weight: bold;
+    justify-content: center;
+    text-align: center;
+ }
