added new styling

--- a/styles/landing.css
+++ b/styles/landing.css
@@ -4,6 +4,11 @@
     text-decoration: none;
 
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .navbar{
     background: rgb(67, 9, 9);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -116,17 +121,17 @@ button:hover{
 
 
 .titlecontainer{
-    height: 700px;
+    height: 600px;
     width: 1000px;
 }
 .titlediv{
     height: 500x;
-    width: 50%;
+    width: 60%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #874619;
     display: inline-block;
     justify-content: center;
-    margin: 20% 40% 20% 30%;
+    margin: 20% 30% 20% 30%;
     padding: 20px 20px;
     
 }
@@ -167,8 +172,8 @@ button:hover{
     background-size: cover;
     min-height: 800px;
     width:100%;
-    color: black;
-    font-size: large;
+    color:white;
+    font-size:20px;
     padding: 10px;
     text-align: center;
  }
