--- a/styles/landing.css
+++ b/styles/landing.css
@@ -164,6 +164,9 @@ button:hover{
     display:flex;
     justify-content:center;
     align-items:center;
+    padding: auto;
+    
+
  }
  .imagecontainer{
     background-repeat: no-repeat;
