changing layout and adding content and styling

--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -1,152 +1,110 @@
-/* .playfair-display-<uniquifier> {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+body {
+    display: flex;
+    flex-direction: column;
 }
-
-.open-sans-<uniquifier> {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-} */
-
-
 
 header {
-    margin-bottom: 0px;
+    max-height: 400px;
+    overflow: hidden;
+}
+.header-image {
     width: 100%;
-    max-height: fit-content;
+    max-width: 100%;
+    min-height: 400px;
+    position: relative;
+    bottom: 110px;
+    right: 0px;
 }
 
-header, img {
-    /* max-height: 100%; */
-    /* margin-top: -100px;
-    margin-left: -100px; */
-    border-image: stretch;
-    margin-top: -70px;
-    margin-left: -10px;
-    margin-bottom: 0; /* funkar inte? */
-    max-height: ;
 
-    /* background-size: 100%; */
-
-    /* box-sizing: border-box; */
-    
-    /* height: 100%; */
-}
-
-.main-text {
-    text-align: center;
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    /* font-weight: <weight>; */
-    font-style: normal;
-    background-color: #eeeeee;
-}
 
 h1 {
     color: #874619;
     font-size: 60px;
-    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.info-container {
+    width: 100%;
+    height: 492px;
+    background-color: #eeeeee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.address, .mail-and-phone {
+    text-align: center;
+}
+.fa-brands {
+    font-size: 36px;
+}
+.title-contact-info {
+    margin-bottom: 0px;
 }
 
-.describing-text {
-    color: #121212;
-    font-size: 18px;
+
+.write-to-us-container {
+    width: 100%;
+    height: 410px;
+    padding-top: 54px;
+    padding-bottom: 54px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.write-to-us {
+    position: relative;
+    right: 500px;
+}
+.input-name, .input-email {
+    max-width: 491px;
+    width: 100%;
+    min-height: 17px;
+    padding: 16px;
+    background-color: #eeeeee;
+    border: none;
+}
+.input-name {
+    margin-right: 10px;
+}
+.input-email {
+    margin-left: 10px;
+}
+.message {
+    max-width: 1079px;
+    width: 100%;
+    min-height: 118px;
+    padding: 16px;
+    background-color: #eeeeee;
+    border: none;
+}
+.inputs {
+    max-width: 1111px;
+    width: 100%;
+   /* height: 410px; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.button {
+    position: relative;
+    left: 495px; /*ej screen adjustable*/
+    width: 127px;
+    height: 44px;
+    border-radius: 30px;
+    border: none;
+    background-color: brown;
+    color: white;
+    font-size: 20px;
 }
 
-h4 {
-    font-size: 18px;
+.map {
+    width: 100%;
+    height: 506px;
+    /* height: 100vh; */
 }
-
-.finns-på-info {
-    /* Lato', Helvetica, Arial, Lucida, sans-serif; */
-
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    /* font-weight: <weight>; */
-    font-style: normal;
-    font-variation-settings: "wdth" 100;
-    font-size: 14px;
-}
-
-.buttons {
-    font-size: 30px;
-}
-
-section {
+iframe {
     width: 100%;
     height: 100%;
-    /* margin-top: 0px;
-    margin-bottom: 0px; */
-} /*funkar inte*/
-
-.skriv-section {
-    /* text-align: center; */
-    
 }
-
-.skriv-till-oss {
-    /* font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    /* font-weight: <weight>; */
-    /*font-style: normal; */
-
-  
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  /* font-weight: <weight>; */
-  font-style: normal;
-
-}
-
-.skriv-name, .skriv-e-mail {
-    width: 415px;
-    height: 17px;
-    background-color: #eeeeee;
-    border: none;
-    padding: 16px;
-    outline: none;
-    
-    
-}
-
-.skriv-name {
-    margin-right: 26px;
-}
-
-.skriv-e-mail {
-
-}
-
-.skriv-meddelande {
-    width: 892px;
-    height: 118px;
-    background-color: #eeeeee;
-    border: none;
-    padding: 16px;   
-    outline: none;
-    
-}
-
-.skicka-btn {
-    width: 128px;
-    height: 46px;
-    /* padding: 5px, 13px, 5px, 36px; */
-    background-color: #874619;
-    border: none;
-    border-radius: 20px;
-    color: white;
-    font-family: "Playfair Display", serif;
-    font-optical-sizing: auto;
-    font-weight: 500px; /* not working, need to link to proper style in google fonts? */
-    font-size: 18px;
-    margin-left: 800px; /* ändra efter att flyttat hela */
-
-}
-
-
