--- a/styles/landing.css
+++ b/styles/landing.css
@@ -9,6 +9,7 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
+/* header */
 .navbar{
     background: rgb(67, 9, 9);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -52,6 +53,7 @@ html, body {
     border: 1.5px solid black;
 }
 
+/* hero part*/
 
 .container{
     padding: 0 0%;   
@@ -114,8 +116,7 @@ button:hover{
     border: 2px solid brown;
 }
 
-
-
+/*third title section*/
 .titlecontainer{
     height: 600px;
     width: 1000px;
@@ -161,9 +162,10 @@ button:hover{
     justify-content:center;
     align-items:center;
     padding: auto;
-    
-
  }
+
+
+ /*fourth image section*/
  .imagecontainer{
     background-repeat: no-repeat;
     font-style: italic;
@@ -177,8 +179,19 @@ button:hover{
     text-align: center;
  }
  .footer{
-    height: 400px;
+    height: 350px;
     width: 100%;
-    background-color: #323434;
-
+    background-color:rgb(67, 9, 9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
  }
+ 	.map {
+    width: 80%;
+    height: 300px;
+    /* height: 100vh; */
+}
+iframe {
+    width: 100%;
+    height: 100%;
+}
