--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -11,10 +11,11 @@ header {
     width: 100%;
     max-width: 100%;
     min-height: 400px;
-    position: relative;
+    /* position: relative;
     bottom: 110px;
-    right: 0px;
+    right: 0px; */
 }
+
 
 
 
@@ -41,6 +42,7 @@ h1 {
 .title-contact-info {
     margin-bottom: 0px;
 }
+
 
 
 .write-to-us-container {
@@ -102,9 +104,69 @@ h1 {
 .map {
     width: 100%;
     height: 506px;
-    /* height: 100vh; */
 }
 iframe {
     width: 100%;
     height: 100%;
 }
+
+
+
+/* footer starts from here and all the rest down */
+
+footer {
+    height: 438px;
+    width: 100%;
+    background-color: #323434;
+    position: relative;
+}
+.footer-content {
+    min-height: 276px;
+    width: 100%;
+    padding-top: 54px;
+    padding-bottom: 54px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.footer-text {
+    height: 207px;
+    width: 100%;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+} 
+.address-footer {
+    text-align: left;
+}
+.footer-contact, .address-footer, .footer-mail-and-phone {
+    margin: 5px;
+    color: white;
+}
+.map-end-page {
+    max-width: 700px;
+    width: 100%;
+    height: 222px;
+}
+
+.end-of-page {
+    height: 54px;
+    width: 100%;
+    background-color:  #171717;
+    position: absolute;
+    bottom: 0; /*if i make screen smaller it isnt at bottom?*/
+    display: flex;
+    justify-content: center;
+}
+.footer-p-container {
+    max-width: 1044px;
+    width: 100%;
+    height: 24px;
+}
+.footer-p {
+    color: #666;
+}
+
