--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,11 +1,13 @@
-*{margin: 0;
+*{
+    margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-decoration: none;
 }
-html, body {
+.body {
     max-width: 100%;
     overflow-x: hidden;
 }
+
 .navbar{
     background: rgb(67, 9, 9);
     font-family: Georgia, 'Times New Roman', Times, serif;
