--- a/styles/landing.css
+++ b/styles/landing.css
@@ -53,6 +53,8 @@ html, body {
     border: 1.5px solid black;
 }
 
+
+
 /* hero part*/
 
 .container{
@@ -178,20 +180,62 @@ button:hover{
     padding: 10px;
     text-align: center;
  }
- .footer{
-    height: 350px;
+
+
+ /* footer starts from here and all the rest down */
+
+footer {
+    height: 438px;
     width: 100%;
-    background-color:rgb(67, 9, 9);
+    background-color:  rgb(67, 9, 9);
+    position: relative;
+}
+.footer-content {
+    min-height: 276px;
+    width: 100%;
+    padding-top: 54px;
+    padding-bottom: 54px;
     display: flex;
     align-items: center;
-    justify-content: center;
- }
- 	.map {
-    width: 80%;
-    height: 300px;
-    /* height: 100vh; */
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
-iframe {
+.footer-text {
+    height: 207px;
     width: 100%;
-    height: 100%;
+    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+} 
+.address-footer {
+    text-align: left;
+}
+.footer-contact, .address-footer, .footer-mail-and-phone {
+    margin: 5px;
+    color: white;
+}
+.map-end-page {
+    max-width: 700px;
+    width: 100%;
+    height: 222px;
+}
+
+.end-of-page {
+    height: 54px;
+    width: 100%;
+    background-color:  #171717;
+    position: absolute;
+    bottom: 0; /*if i make screen smaller it isnt at bottom?*/
+    display: flex;
+    justify-content: center;
+}
+.footer-p-container {
+    max-width: 1044px;
+    width: 100%;
+    height: 24px;
+}
+.footer-p {
+    color: #666;
 }
