--- a/styles/landing.css
+++ b/styles/landing.css
@@ -60,7 +60,6 @@ html, body {
 .container{
     padding: 0 0%;   
     min-height: 50px;
-    
     display: flex;
     align-items: center;
     justify-content:center ;
@@ -104,18 +103,19 @@ html, body {
     }
 }
 button{
-    background-color:rgba(128, 36, 36, 0.822);
+    background-color:#531818;
     margin: 20px;
     height:50px;
     width:200px;
     color:white;
     border-radius: 40%;
-    border-color: white;
+    border-color: 2px solid black;
 }
 
 button:hover{
-    color: burlywood;
-    border: 2px solid brown;
+    color: black;
+    border: 1px solid black;
+    transition: ease-in-out 0.5s;
 }
 
 /*third title section*/
@@ -159,11 +159,9 @@ button:hover{
     font-weight: bold;
     color:black;
  }
- .alignment{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    padding: auto;
+ .titlediv button{
+   
+    margin-left:180px;
  }
 
 
@@ -180,14 +178,19 @@ button:hover{
     padding: 10px;
     text-align: center;
  }
-
+.alignment{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding: auto;
+}
 
  /* footer starts from here and all the rest down */
 
 footer {
     height: 438px;
     width: 100%;
-    background-color:  rgb(67, 9, 9);
+    background-color: rgb(67, 9, 9);
     position: relative;
 }
 .footer-content {
@@ -225,7 +228,7 @@ footer {
 .end-of-page {
     height: 54px;
     width: 100%;
-    background-color:  #171717;
+    background-color: #171717;
     position: absolute;
     bottom: 0; /*if i make screen smaller it isnt at bottom?*/
     display: flex;
