--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,3 +1,5 @@
+
+
 .navbar{
     background: rgb(67, 9, 9);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -42,6 +44,49 @@
 }
 
 /* header end */
+
+.background-top {
+    height: 734px;
+    width: 100%;
+    /* max-width: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.background-gallery {
+    max-width: 80%;
+    width: 100%;
+    height: 480px;
+    position: relative;
+    top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+.h1-gallery { /* how can i get this centered? */
+    text-align: center;
+    position: absolute;
+    right: 50%;
+}
+.background-gallery img {
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+}
+.image-container1, .image-container2, .image-container3, .image-container4, .image-container5, .image-container6, .image-container7, .image-container8 {
+    margin: 20px;
+}
+.image1, .image3, .image5, .image7, .image8 {
+    width: 230px;
+    height: 165px;
+}
+.image-container2, .image-container4, .image-container6 {
+    width: 230px;
+    height: 165px; 
+    overflow: hidden;
+} /*how do i get these centered?*/
 
 
 
