--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -54,7 +54,7 @@
     justify-content: center;
 }
 .background-gallery {
-    max-width: 80%;
+    max-width: 1080px;
     width: 100%;
     height: 480px;
     position: relative;
@@ -67,7 +67,10 @@
 .h1-gallery { /* how can i get this centered? */
     text-align: center;
     position: absolute;
-    right: 50%;
+    right: 45%;
+    bottom: 500px;
+    font-size: 60px;
+    color: ;
 }
 .background-gallery img {
     max-width: 100%;
