--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -91,6 +91,28 @@
     overflow: hidden;
 } /*how do i get these centered?*/
 
+/*trying to change the images sizes*/
+ .image1:hover, .image2:hover, .image3:hover, .image4:hover, .image5:hover, .image6:hover, .image7:hover, .image8:hover {
+    opacity: 50%;
+ }
+.image1:active, .image2:active, .image3:active, .image4:active, .image5:active, .image6:active, .image7:active, .image8:active {
+    width: 65%;
+    height: 80%;
+    position: fixed; 
+    top: 110px;
+    left: 300px;
+    opacity: 100%;
+}
+.image2:active, .image4:active, .image6:active {
+    width: 35%;
+    height: 80%;
+    position: fixed; 
+    top: 110px;
+    left: 530px;
+    opacity: 100%;
+}
+
+
 
 
 
