--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -158,8 +158,7 @@ footer {
 .map-end-page {
     max-width: 700px;
     width: 100%;
-    max-height: 222px;
-    height: 100%;
+    height: 222px;
 }
 
 .end-of-page {
