--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -204,10 +204,8 @@ footer {
     width: 100%;
     height: 222px;
 }
-/*this is the change i made*/
-.fa-brands:last-of-type {
-    width: 32px;
-    height: 32px;
+.fa-brands {
+    font-size: 32px;
 }
 
 .end-of-page {
@@ -215,7 +213,7 @@ footer {
     width: 100%;
     background-color:  #171717;
     position: absolute;
-    bottom: 0; /*if i make screen smaller it isnt at bottom?*/
+    bottom: 0; 
     display: flex;
     justify-content: center;
 }
