--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -45,7 +45,8 @@ li a{
 /*header end*/
 /*main start*/  
  /*del 1 content start*/
-.content{display: flex;}
+.content{display: flex;
+flex-direction: row;}
 .content-container{width: 100%;
     height: 492px;
     background-color: #ccc9c9;
@@ -157,6 +158,7 @@ footer {
 .footer-p {
     color: #666;
 }
+
 
 
 
