--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -46,9 +46,8 @@
 /* header end */
 
 .background-top {
-    height: 734px;
+    height: 534px;
     width: 100%;
-    /* max-width: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,18 +56,14 @@
     max-width: 1080px;
     width: 100%;
     height: 480px;
-    position: relative;
-    top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
 }
-.h1-gallery { /* how can i get this centered? */
-    text-align: center;
-    position: absolute;
-    right: 45%;
-    bottom: 500px;
+.h1-gallery { 
+    display: flex;
+    justify-content: center;
     font-size: 60px;
     color: #874619;
 }
@@ -163,13 +158,26 @@ footer {
 .fa-brands {
     font-size: 32px;
 }
+/* .fa-brands:hover {
+    color: white;
+} */
+.fa-brands:active {
+    color: #666;
+}
+.a-fa-brands:hover {
+    color: white;
+}
+.a-fa-brands {
+    text-decoration: none;
+    color: black;
+}
 
 .end-of-page {
     height: 54px;
     width: 100%;
     background-color:  #171717;
     position: absolute;
-    bottom: 0; /*if i make screen smaller it isnt at bottom?*/
+    bottom: 0; 
     display: flex;
     justify-content: center;
 }
