--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -45,59 +45,68 @@ li a{
 /*header end*/
 /*main start*/  
  /*del 1 content start*/
-.content{display: flex;
-flex-direction: row;}
-.content-container{width: 100%;
+.content{
+    display: flex;
+    flex-direction: row;}
+.content-container{
+    width: 100%;
     height: 492px;
-    background-color: #ccc9c9;
+    background-color:#eeeeee;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.top-content-container{color: black;
+.top-content-container{
+    color: black;
     font-size: 20px;
     font-weight: bold;
-    margin-right: 25px;}
+}
 .top-title-h1{
     color: #874619;
     font-size: 60px;
     margin-bottom: 0px;
-    
-
+    justify-self: center;
+    margin-top: 50px;
 }    
-.top-content-info-h2{color: black;
+.top-content-info-h2{
+    color: black;
     font-size: 23px;
     font-weight: normal;
-    margin-right: 25px;}
-.middle-container{width: 100%;
+    }
+.middle-container{
+    width: 100%;
     height: 492px;
-    background-color: #ccc9c9;
+    background-color: #eeeeee;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.middle-title-h2{color: black;
+.middle-title-h2{
+    color: black;
     font-size: 30px;
     font-weight: bold;
-    margin-right: 25px;}
-.middle-info-p{color: black;
+    margin-top: 40px;}
+.middle-info-p{
+    color: black;
     font-size: 23px;
     font-weight: normal;
-    margin-right: 25px;}
-.bottom-container{color: black;
+    justify-self: center;}
+.bottom-container{
+    color: black;
     font-size: 20px;
     font-weight: bold;
-    margin-right: 25px;}
+    margin-top: 40px;}
 .bottom-title-h3{
     color: black;
     font-size: 25px;
     font-weight: bold;
-    margin-right: 25px;
-    
+    justify-self: center;
+    margin-bottom: 75px;
 }
-.bottom-fonders-info-h4{color: black;
+.bottom-fonders-info-h2{
+    color: black;
     font-size: 30px;
     font-weight: bold;
     margin-right: 25px;}
@@ -140,13 +149,29 @@ footer {
     width: 100%;
     height: 222px;
 }
+.fa-brands {
+    font-size: 32px;
+}
+/* .fa-brands:hover {
+    color: white;
+} */
+.fa-brands:active {
+    color: #666;
+}
+.a-fa-brands:hover {
+    color: white;
+}
+.a-fa-brands {
+    text-decoration: none;
+    color: black;
+}
 
 .end-of-page {
     height: 54px;
     width: 100%;
     background-color:  #171717;
     position: absolute;
-    bottom: 0; /*if i make screen smaller it isnt at bottom?*/
+    bottom: 0; 
     display: flex;
     justify-content: center;
 }
@@ -158,50 +183,5 @@ footer {
 .footer-p {
     color: #666;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
