--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
     justify-content: space-between;
  }
-  
+ 
  li{
     list-style: none;
     display: inline-block;
@@ -26,6 +26,10 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin-right: 25px;
+}
+li a:hover{
+    color: #171717;
+    background-color:gray;
 }
 
 .logo {
