--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -13,21 +13,29 @@
     padding-left: 15px;
     height: 100px;
 }
+
 .navdiv{
     display: flex;
     align-items: center;
     justify-content: space-between;
  }
+  
  li{
     list-style: none;
     display: inline-block;
  }
-li a{
+
+ li a{
     color: white;
     font-size: 20px;
     font-weight: bold;
     margin-right: 25px;
 }
+li a:hover{
+    color: #171717;
+    background-color:gray;
+}
+
 .logo {
     height: 80px;
     width: 80px;
@@ -36,9 +44,11 @@ li a{
     background-color: beige;
     margin-top: 10px;
 }
+
 .border{
     border: 1.5px solid transparent;
 }
+
 .border:hover{
     border: 1.5px solid black;
 }
