--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -26,6 +26,7 @@ body {
     font-size: 20px;
     font-weight: bold;
     margin-right: 25px;
+    text-decoration: none;
 }
 li a:hover{
     color: #171717;
