--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -60,7 +60,6 @@ li a:hover{
     flex-direction: row;}
 .content-container{
     width: 100%;
-    height: 492px;
     background-color:#eeeeee;
     display: flex;
     flex-direction: column;
@@ -78,6 +77,7 @@ li a:hover{
     margin-bottom: 0px;
     justify-self: center;
     margin-top: 50px;
+    line-height: 100px;
 }    
 .top-content-info-h2{
     color: black;
@@ -86,7 +86,6 @@ li a:hover{
     }
 .middle-container{
     width: 100%;
-    height: 492px;
     background-color: #eeeeee;
     display: flex;
     flex-direction: column;
@@ -102,7 +101,10 @@ li a:hover{
     color: black;
     font-size: 23px;
     font-weight: normal;
-    justify-self: center;}
+    justify-self: center;
+    margin: 20px;
+    line-height: 39px;
+    text-align: center;}
 .bottom-container{
     color: black;
     font-size: 20px;
@@ -119,7 +121,8 @@ li a:hover{
     color: black;
     font-size: 30px;
     font-weight: bold;
-    margin-right: 25px;}
+    margin-right: 25px;
+    line-height: 80px;}
 
  /*footer start*/
 footer {
