--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -93,7 +93,7 @@ li a:hover{
     justify-content: center;
 }
 .middle-title-h2{
-    color: black;
+    color: #874619;
     font-size: 30px;
     font-weight: bold;
     margin-top: 40px;}
@@ -111,7 +111,7 @@ li a:hover{
     font-weight: bold;
     margin-top: 40px;}
 .bottom-title-h3{
-    color: black;
+    color: #874619;
     font-size: 25px;
     font-weight: bold;
     justify-self: center;
