--- a/styles/landing.css
+++ b/styles/landing.css
@@ -123,17 +123,11 @@ button:hover{
 }
 
 /*third title section*/
-.titlecontainer{
-    height: 600px;
-    width: 1000px;
-}
+
 .titlediv{
-    height: 500x;
-    width: 60%;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #874619;
-    display: inline-block;
-    justify-content: center;
+    text-align: center;
     margin: 20% 30% 20% 30%;
     padding: 20px 20px;
     
@@ -150,21 +144,17 @@ button:hover{
     color:black;
     font-size: 20px;
     font-weight: bold;
-    display:flex;
-    justify-content: center;
     text-align: center;
     margin:10px;
  }
  .titlediv p {
     font-size:15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     font-weight: bold;
     color:black;
  }
  .titlediv button{
-    margin-left:180px;
+    text-align: center;
  }
 
 
