--- a/styles/landing.css
+++ b/styles/landing.css
@@ -62,8 +62,7 @@ li a:hover{
 /* hero part*/
 
 .container{
-    padding: 0 0%;   
-    min-height: 50px;
+    padding: 0%;   
     display: flex;
     align-items: center;
     justify-content:center ;
@@ -73,7 +72,7 @@ li a:hover{
     z-index: -1;
     right: 0;
     bottom:0 ;
-    height: 100%;
+   min-height: 100%;
 }
 .content{
     text-align: center;
@@ -119,7 +118,7 @@ button{
 button:hover{
     color: black;
     border: 1px solid black;
-    transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.3s;
 }
 
 /*third title section*/
@@ -128,7 +127,7 @@ button:hover{
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #874619;
     text-align: center;
-    margin: 20% 30% 20% 30%;
+    margin: 20% 20%;
     padding: 20px 20px;
     
 }
@@ -138,20 +137,23 @@ button:hover{
     text-align: center;
     font-weight: bolder;
     text-decoration: underline;
+    line-height: 50px;
  }
 
- .titlediv h4 ,h5{
+ .titlediv h4{
     color:black;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
     margin:10px;
+    line-height: 40px;
  }
  .titlediv p {
     font-size:15px;
     text-align: center;
     font-weight: bold;
     color:black;
+    line-height: 40px;
  }
  .titlediv button{
     text-align: center;
